--- a/style.css
+++ b/style.css
@@ -2,21 +2,11 @@ header{
      background: aquamarine; display: flex; justify-content: center; align-items: center;
 }
 
-nav1{
-    
+nav ul{
+   list-style: none; 
 }
 
-n1{
-    
-}
-
-n2{
-    
-}
-
-n3{
-    
-}
+li {float:left; list-style:none; margin:1px;}
 h2{
     
 }
